# eve-copilot

./: .env.example  .gitignore  ARCHITECTURE.deployment.md  ARCHITECTURE.md  ARCHITECTURE.microservices.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.copilot  LICENSE  README.md  conftest.py  docker-compose.yml  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start-all.sh  stop-all.sh
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: __init__.py  main.py  settings.py
services/api-gateway/app/config/: module_map.yaml  tier_map.yaml
services/api-gateway/app/middleware/: __init__.py  character_context.py  feature_gate.py  gate_helpers.py  proxy.py  rate_limit.py  redis_pool.py  tier_config.py
services/api-gateway/app/routers/: __init__.py  dashboard.py  feedback.py  health.py
services/api-gateway/app/tests/: test_character_context.py  test_feature_gate.py  test_integration_gate.py  test_rate_limit.py  test_security_headers.py
services/auth-service/: Dockerfile  README.md  pyproject.toml
services/auth-service/app/: __init__.py  database.py  main.py
services/auth-service/app/migrations/: 003_scope_consents.sql  004_org_management.sql  005_diplomacy.sql  006_bulletin.sql  007_fleet_commander_role.sql
services/auth-service/app/models/: __init__.py  subscription.py  token.py
services/auth-service/app/repository/: __init__.py  account_store.py  db_token_store.py  module_store.py  org_store.py  subscription_lifecycle.py  subscription_queries.py  subscription_store.py  tier_store.py  token_store.py
services/auth-service/app/routers/: __init__.py  admin.py  auth.py  bulletin.py  character_management.py  diplomacy.py  org_management.py  public_auth.py  settings.py  subscription.py  tier.py
services/auth-service/app/services/: __init__.py  director_detection.py  eve_sso.py  jwt_service.py  payment_poller.py  payment_processor.py  sso_handler.py  wallet_journal.py
services/auth-service/app/tests/: conftest.py  test_account_store.py  test_character_management.py  test_diplomacy.py  test_director_detection.py  test_grace_period.py  test_integration_flows.py  test_jwt_enriched.py  test_module_store.py  test_org_management.py  test_org_store.py  test_payment_poller.py  test_payment_processor.py  test_saas_metrics.py  test_tier_resolution.py  test_wallet_journal.py
services/character-service/: Dockerfile  README.md  pyproject.toml
services/character-service/app/: main.py
services/character-service/app/migrations/: 001_skillfarm.sql
services/character-service/app/models/: __init__.py  character.py  corporation.py
services/character-service/app/routers/: __init__.py  account_summary.py  character.py  corporation.py  doctrine_stats.py  fittings.py  internal.py  mail.py  mastery.py  research.py  sde_browser.py  skill_analysis.py  skill_plans.py  skill_prerequisites.py  skillfarm.py  skills.py  sync.py
services/character-service/app/services/: __init__.py  auth_client.py  character.py  doctrine_engine.py  esi_client.py  fitting_service.py  mastery_service.py  repository.py  research_service.py  skill_analysis_service.py  skill_planner_service.py  skill_prerequisites_service.py
services/character-service/app/tests/: conftest.py  test_account_summary.py  test_boosters.py  test_charge_modifiers.py  test_doctrine_engine.py  test_dogma_constraints.py  test_dogma_engine.py  test_dogma_integration.py  test_dogma_parser.py  test_dogma_stacking.py  test_dogma_v4_integration.py  test_fighters.py  test_fit_comparison.py  test_fitting_stats.py  test_fleet_boosts.py  test_implant_support.py  test_mastery.py  test_module_states.py  test_overheating.py  (+8 more)
services/ectmap-service/: Dockerfile  pyproject.toml  requirements.txt
services/ectmap-service/app/: database.py  main.py  models.py  snapshot.py  views.py
services/finance-service/: Dockerfile  README.md  conftest.py  pyproject.toml
services/finance-service/app/: main.py
services/hr-service/: Dockerfile  pyproject.toml
services/hr-service/app/: main.py
services/market-service/: Dockerfile  README.md  pyproject.toml
services/market-service/app/: __init__.py  main.py
services/mcp-service/: Dockerfile  pyproject.toml  requirements.txt
services/mcp-service/app/: __init__.py  main.py  mcp_bridge.py
services/military-service/: Dockerfile  pyproject.toml
services/military-service/app/: database.py  main.py
services/scheduler-service/: Dockerfile  README.md  pyproject.toml
services/scheduler-service/app/: __init__.py  main.py
services/scheduler-service/migrations/: 001_job_history.sql
services/war-intel-service/: Dockerfile  README.md  pyproject.toml
services/war-intel-service/app/: __init__.py  database.py  main.py
services/wormhole-service/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
services/wormhole-service/app/: main.py
services/wormhole-service/migrations/: 001_wormhole_tables.sql  002_commodity_price_history.sql
services/wormhole-service/tests/: test_importer.py  test_main.py
services/zkillboard/: Dockerfile  __init__.py  pyproject.toml  r2z2_client.py  reports_service.py  state_manager.py
services/zkillboard/app/: main.py
services/zkillboard/live/: __init__.py  battle_tracker.py  listener.py  models.py  ship_classifier.py  statistics.py
services/zkillboard/reports/: __init__.py  base.py  trade_routes.py  war_profiteering.py
services/zkillboard/tests/: conftest.py  test_r2z2_client.py
shared/: pyproject.toml
shared/eve_shared/: __init__.py  database.py  health.py  logging.py  metrics.py  metrics_router.py  redis_client.py
shared/eve_shared/constants/: __init__.py  coalition.py  ship_groups.py  trade_hubs.py
shared/eve_shared/esi/: __init__.py  circuit_breaker.py  client.py  encryption.py  pagination.py  token_lock.py
shared/eve_shared/middleware/: __init__.py  exception_handler.py  metrics.py
shared/eve_shared/monitoring/: __init__.py  business_metrics.py  db_instrumentation.py
shared/eve_shared/tests/: test_config.py  test_database.py
shared/eve_shared/utils/: error_handling.py
(+2063 files in other folders)
