[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eve-military-service"
version = "1.0.0"
description = "EVE Co-Pilot Military Service - Fleet Ops, D-Scan, Ops Calendar"
requires-python = ">=3.11"
dependencies = [
    "eve-shared",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "apscheduler>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
