[project]
name = "eve-zkillboard-service"
version = "1.0.0"
description = "EVE Co-Pilot zkillboard Live Stream Service"
requires-python = ">=3.11"

dependencies = [
    "eve-shared",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
